@@ -56,7 +56,9 @@ C-API
 Library
 -------
 
-- Issue 3776: Deprecate the bsddb package for removal in 3.0.
+- Issue #3535: zipfile couldn't read some zip files larger than 2GB.
+
+- Issue #3776: Deprecate the bsddb package for removal in 3.0.
 
 - Issue #3762: platform.architecture() fails if python is lanched via
   its symbolic link.
